--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "vite build"
+  command = "npm run build"
   functions = "netlify/functions"
   publish = "dist"
 
@@ -23,3 +23,9 @@
         max-age=31536000,
         immutable
         '''
+
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+  Access-Control-Allow-Origin = "*"
+  
