still working out cors error but the frontend comes back now

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,11 @@
   functions = "netlify/functions"
   publish = "dist"
 
- [functions]
+[dev]
+  framework = "#auto"        
+  publish = "dev-dist"          
+
+[functions]
     directory = "/netlify/functions/" 
 
 [[redirects]]
